Bug 439190 - Command line option --profile has no effect on an already running instance
Summary: Command line option --profile has no effect on an already running instance
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Juraj
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-26 16:14 UTC by Theo
Modified: 2025-06-27 17:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Theo 2021-06-26 16:14:55 UTC
SUMMARY
The command line option '--profile' is ignored if there are running instances with the default profile and the target profile.

STEPS TO REPRODUCE
1. Start Falkon with default profile:
   $ falkon
2. Start a second instance with another profile:
   $ falkon --no-remote --profile test
3. Try to control the second instance from the command line:
   $ falkon --profile test --new-tab www.falkon.org
   $ falkon --profile test --fullscreen

OBSERVED RESULT
The commands apply to the first instance using the default profile.

EXPECTED RESULT
The commands should observe the option '--profile' and apply to the second instance using the profile 'test'.
Comment 1 Bug Janitor Service 2025-06-22 10:56:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/138
Comment 2 Juraj 2025-06-27 17:18:20 UTC
Git commit bf065fb19396cab1f630fcea98992802b586ab9b by Juraj Oravec.
Committed on 27/06/2025 at 17:17.
Pushed by jurajo into branch 'master'.

Mark appId with current profile name
FIXED-IN: 25.08.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +7    -1    src/lib/app/mainapplication.cpp

https://invent.kde.org/network/falkon/-/commit/bf065fb19396cab1f630fcea98992802b586ab9b