Mark appId with current profile name

BUG: 439190
FIXED-IN: 25.08.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>